# N3D

./: Cargo.toml  README.md
res/matcap/: basic_1.tga  basic_2.tga  basic_dark.tga  basic_side.tga  ceramic_dark.tga  ceramic_lightbulb.tga  check_normal+y.tga  check_rim_dark.tga  check_rim_light.tga  clay_brown.tga  clay_muddy.tga  clay_studio.tga  jade.tga  metal_anisotropic.tga  metal_carpaint.tga  metal_lead.tga  metal_shiny1.exr  metal_shiny1.tga  metal_shiny2.exr  pearl.tga  reflection_check_horizontal.tga  reflection_check_vertical.tga  resin.tga  skin.tga  toon.tga
res/shaders/: egui.frag  egui.vert  grid.frag  grid.vert  hello.frag  hello.vert  ray.frag  ray.frag.bak  ray.vert
res/textures/: default.tga  default.xcf
src/: camera.rs  engine.rs  input.rs  lib.rs  main.rs  node_graph.rs  ray_marcher.rs  renderer.rs  sdf.rs  window.rs
src/renderer/: ebo.rs  mesh.rs  painter.rs  shader.rs  texture.rs  vao.rs  vbo.rs  vert.rs
src/renderer/mesh/: primitives.rs
src/sdf/strings/: box.frag  camera.frag  declarations.frag  definitions.frag  main.frag  math.frag  ops.frag  prelude.frag  primitives.frag  ray.frag  scene.frag  space.frag  srgb.frag
