[package]
name = "n3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
egui = "0.22.0"
egui-winit = "0.22.0"
egui_node_graph = { path = "../egui_node_graph" }
epaint = "0.22.0"
gl = "0.14.0"
glutin = "0.30.10"
glutin-winit = "0.3.0"
image = "0.24.7"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
offset = "0.1.4"
raw-window-handle = "0.5.2"
serde = "1.0.183"
thiserror = "1.0.47"
winit = "0.28.6"
